<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moskito</string>
    <string name="history">History</string>
    <string name="applications">Applications</string>
    <string name="settings">Settings</string>
    <string name="server_address">Server address</string>
    <string name="port">Port</string>
    <string name="authorization">Authorization</string>
    <string name="update_interval">Update Interval (minutes)</string>
    <string name="no_data">No Data Available</string>
    <string name="http">http</string>
    <string name="https">https</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="interval">1</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="no_charts">MoSKito control.\n\nThis application does not have any monitored charts.</string>
    <string name="moskito">MoSKito Control</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">Your device is experiencing unstable Internet connection.</string>
    <string name="try_again">Please connect to Internet and try again.</string>
    <string name="no_network_connection">MoSKito control.\n\nThere is no network connection available. Please connect to Internet and try again.</string>
    <string name="save_settings">Settings were saved.</string>

</resources>
