<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/wight"
              android:layout_centerInParent="true"
              android:layout_width="200dp"
              android:layout_height="140dp">
      <RelativeLayout android:layout_width="190dp"
                      android:layout_height="130dp"
                      android:layout_centerInParent="true"
                      android:background="@color/black">
          <TextView  android:id="@+id/moskito"
                  android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/moskito"/>
          <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/moskito"
                    android:gravity="center_horizontal"
                    android:text="@string/no_charts"/>
          <Button android:layout_width="match_parent"
                  android:id="@+id/button_ok"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/text"
                  android:layout_marginTop="10dp"
                  android:gravity="center_horizontal"
                  android:text="@string/ok"/>
      </RelativeLayout>
</RelativeLayout>