<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_font">
    <TextView
            android:id="@+id/settings_header"
            android:layout_height="@dimen/header_height"
            android:layout_width="match_parent"
            android:text="@string/settings"
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:textColor="@android:color/black"/>
    <View
        android:id="@+id/settings_devider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/main_list_devider"/>

    <TextView
        android:id="@+id/server_address"
        android:layout_height="20dp"
        android:layout_width="match_parent"
        android:text="@string/server_address"
        android:layout_marginLeft="12dp"/>
    <EditText
            android:id="@+id/server_address_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:textSize="14dp"
            android:text="http://server04.test.anotheria.net"/>
    <TextView
            android:id="@+id/server_port"
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:text="@string/port"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        >
        <EditText
                android:id="@+id/server_address_input"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="14dp"
                android:text="8999"/>
        <TextView
                android:id="@+id/server_port"
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:text="@string/port"/>

    </LinearLayout>
</LinearLayout>